add team parameter to body texture endpoint
